# gm-lang.org

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  about.markdown  about.md
.github/workflows/: vultr.yml
_includes/: social.html
_posts/: 2020-09-05-welcome-to-jekyll.markdown  2020-12-13-welcome-to-GM.md
docs/: CNAME  index.html
docs.bk/: _coverpage.md  _navbar.md  _sidebar.md
src/: asset.rs  main.rs
src/styles/: app.scss  fonts.scss
static/images/: browserconfig.xml
static/scripts/: app_1423018775231912818.js  highlight.pack.js  init.js  languages.js
static/styles/: app_3435740262440257562.css  vendor_15717425626652697124.css
templates/: 404.hbs  index.hbs
templates/components/: footer.hbs  languages-dropdown.hbs  layout.hbs  nav.hbs
